<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".register.RegisterActivity">

    <TextView
        android:id="@+id/register_tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:drawableTint="@color/colorAccent"
                    android:hint="@string/register_tint_name"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:drawableStart="@drawable/user"
                    android:drawableTint="@color/colorAccent"
                    android:hint="@string/register_tint_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_et_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/lock"
                    android:drawableTint="@color/colorAccent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/register_tint_password"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_bt_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@color/orange"
                android:text="@string/register_action_send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/register_tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/user_profile_image_background"
        android:contentDescription="@string/login_iv_hay_description"
        android:elevation="4dp"
        android:src="@drawable/ic_directions_run_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_view_register_layout"
        app:layout_constraintEnd_toEndOf="@+id/card_view_register_layout"
        app:layout_constraintStart_toStartOf="@+id/card_view_register_layout"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_title"
        app:layout_constraintVertical_bias="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>